# mycelium-fractal-net

./: .bandit  .dockerignore  .gitignore  .gitleaks.toml  .importlinter  .pre-commit-config.yaml  .yamllint  .zenodo.json  =12.0  =44.0.0  ACCEPTANCE_CHECKLIST.md  API_COMPATIBILITY_FIX.md  AUDIT_SUMMARY.md  BENCHMARK_SUMMARY.md  CHANGELOG.md  CI_FIX_SUMMARY.md  CODEOWNERS  COMPLETION_REPORT.md  CONTRIBUTING.md  Dockerfile  FINAL_NEUROMODULATION_CHECKLIST_v9.txt  FINAL_PR_SUMMARY.md  GRPC_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KNOWN_LIMITATIONS.md  LICENSE  MASTER_CONTEXT.md  Makefile  NAMESPACE_FIX_SUMMARY.md  NAMESPACE_MIGRATION.md  NON_GOALS.md  PROGRESS_SUMMARY.md  README.md  RELEASE_CANDIDATE_CHECKLIST.md  RELEASE_NOTES.md  RESOLUTION_SUMMARY.md  SECURITY.md  SECURITY_AUDIT_2025-12-28.md  TECHNICAL_DEBT_ACTION_PLAN.md  TECHNICAL_DEBT_RESOLUTION.md  (+16 more)
.devcontainer/: Dockerfile
.github/: dependabot.yml  settings.yml
.github/workflows/: ci-reusable.yml  ci.yml  codeql.yml  pr-gate.yml  release.yml  scorecard.yml  security.yml
analytics/: __init__.py  fractal_features.py
artifacts/: junit.xml
benchmarks/: benchmark_cognitive.py  benchmark_core.py  benchmark_quality.py  benchmark_scalability.py  bio_baseline.json  calibrate_bio.py  stress_test.py
config/: crypto.yaml
configs/: .env.example  causal_validation_v1.json  crypto.yaml  detection_thresholds_v1.json  dev.json  large.json  medium.json  small.json
data/: README.md
docs/: API.md  ARCHITECTURAL_DEBT.md  ARCHITECTURE.md  BENCHMARKS.md  CAUSAL_VALIDATION.md  CI_CD_PIPELINE.md  CI_FIX_SUMMARY.md  CI_REMEDIATION_REPORT.md  CI_SECURITY_PIPELINE.md  DATA_MODEL.md  DEFECT_REGISTRY.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_CHARTER.md  EVENT_LOGGING.md  FEATURE_SCHEMA.md  GRPC_PRODUCTION_GUIDE.md  GRPC_SECURITY_AUDIT.md  GRPC_TEST_REPORT.md  IMPROVEMENTS_IMPLEMENTED.md  INTEGRATION_GUIDE.md  LOCAL_RUNBOOK.md  MATH_MODEL.md  MFN_BACKLOG.md  MFN_CODE_STRUCTURE.md  MFN_CONNECTORS_GUIDE_UPDATED.md  MFN_CONSOLIDATION_REPORT.md  MFN_CRYPTOGRAPHY.md  MFN_DATASET_SPEC.md  MFN_DATA_MODEL.md  MFN_DATA_PIPELINES.md  MFN_GRPC_API.md  MFN_GRPC_SPEC.md  MFN_INTEGRATION_GAPS.md  MFN_INTEGRATION_SPEC.md  MFN_MATH_MODEL.md  MFN_PERFORMANCE_BASELINES.md  MFN_REPRODUCIBILITY.md  MFN_SECURITY.md  MFN_SYSTEM_ROLE.md  MFN_VALIDATION_REPORT.md  (+30 more)
docs/adr/: 0009-observation-noise-scope.md
docs/contracts/: claims_manifest.json  openapi.v1.json  openapi.v2.json  showcase_run.etalon.sha256
docs/reports/: MFN_TEST_HEALTH_2025-11-30.md
examples/: README.md  finance.py  finance_regime_detection.py  mfn_interactive_analysis.ipynb  quickstart.ipynb  quickstart.py  rl_exploration.py  simple_simulation.py  visualize_field_evolution.py  websocket_client_example.py
experiments/: README.md  __init__.py  actual_output.json  expected_output.json  generate_dataset.py  inspect_features.py
grpc/: README.md
grpc/proto/: mfn.proto
infra/terraform/: main.tf  variables.tf
k8s/: README.md
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  secrets.yaml  service.yaml
load_tests/: locustfile.py  locustfile_ws.py
manuscript/: main.tex
notebooks/: 01_field_simulation.ipynb  02_feature_analysis.ipynb  03_fractal_exploration.ipynb
planning/: mfn_integration_gaps.yaml
protos/: mycelium.proto
results/: adversarial_results.json  finite_size_fit.json  invariance_final.json  plateau_map.npy
scripts/: attest_artifacts.py  baseline_parity.py  bootstrap_local.sh  calibrate_detection.py  check_bio.sh  check_claims_drift.py  check_openapi_contract.py  cleanup_infra.py  criticality_sweep.py  dev_doctor.py  docs_drift_check.py  export_openapi.py  full_system_check.sh  g0_reproducibility.py  g1_independent_derivation.py  g2_falsification.py  g3_cross_validation.py  g4_gamma_scaling.py  g5_digital_twin.py  g6_ai_transfer.py  generate_architecture_ledger.py  generate_bundle_schemas.py  generate_causal_conformance.py  generate_figures.py  generate_lock.py  generate_proto.sh  generate_reproducibility_matrix.py  generate_sbom.py  improvement_cycle.py  interface_parity_check.py  invariance_final.py  invariance_test.py  m_invariant_three_substrates.py  neural_M_v2.py  release_prep.py  release_proof.py  selfcheck.py  sensitivity_sweep.py  showcase_run.py  thermodynamic_landscape.py  (+5 more)
src/: __init__.py  api.py  mfn.py
src/analytics/: fractal_features.py
src/experiments/: __init__.py  generate_dataset.py
src/mycelium_fractal_net/: __init__.py  __main__.py  _optional.py  api.py  api_v1.py  artifact_bundle.py  auto_heal.py  cli.py  cli_display.py  cli_doctor.py  cognitive.py  config.py  config_profiles.py  config_validation.py  intelligence.py  meta_core.py  metrics.py  model.py
src/mycelium_fractal_net.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  golden_hashes.json  test_accel_and_history_cycle2.py  test_api_config.py  test_api_server_completion.py  test_architectural_invariants.py  test_architecture_ledger.py  test_artifact_pipeline_completion.py  test_auto_heal.py  test_axiomatic_choice.py  test_benchmark_regression.py  test_bio_coverage_boost.py  test_bio_extension.py  test_bio_regression.py  test_biophysics_core.py  test_bundle_and_symbolic_cycle2.py  test_bundle_spec.py  test_causal_advanced.py  test_causal_config_sync.py  test_causal_conformance.py  test_causal_invariants.py  test_causal_rules_complete.py  test_choice_operator.py  test_cli_workflows.py  test_completion_contracts_cycle.py  test_config_profiles.py  test_config_validation.py  test_contract_hardening_completion.py  test_coverage_boost.py  test_coverage_deep.py  test_coverage_gaps.py  test_critical_path_coverage.py  test_data_pipelines_small.py  test_dependency_lock.py  test_detection_config_version.py  test_determinism.py  test_diagnose.py  test_diagnostic_memory.py  test_digital_twin.py  test_engine_v1_surface.py  (+79 more)
validation/: final_perfection_check.py  neurochem_controls.py  run_validation_experiments.py  scientific_validation.py  validate_namespace_fix.py
(+315 files in other folders)
