[project]
name = "mycelium-fractal-net"
version = "4.1.0"
description = "Deterministic morphology-aware structural analytics engine with SDK, CLI, and API surfaces."
authors = [{ name = "Yaroslav Vasylenko", email = "example@example.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
keywords = ["morphology", "structural-analytics", "simulation", "forecasting", "anomaly-detection", "field-intelligence"]

dependencies = [
  "numpy>=1.24",
  "sympy>=1.12",
  "pydantic>=2.0",
  "fastapi>=0.100.0",
  "pandas>=1.5.3,<3.0.0",
  "pyarrow>=10.0.0",
  "prometheus_client>=0.17.0",
  "cryptography>=44.0.0",
  "websockets>=12.0",
  "httpx>=0.24.0",
]

[project.optional-dependencies]
http = ["aiohttp>=3.9.4"]
kafka = ["kafka-python>=2.0.0"]
ml = ["torch>=2.0.0,<3.0.0"]
accel = ["numba>=0.60.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-timeout>=2.0.0",
  "pytest-html>=4.1.1",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
  "black>=24.0.0",
  "isort>=5.12.0",
  "types-setuptools",
  "httpx>=0.24.0",
  "hypothesis>=6.0.0",
  "uvicorn>=0.20.0",
  "locust>=2.20.0",
  "packaging>=21.0",
  "import-linter>=2.0",
]
security = [
  "pip-audit>=2.7.0",
  "bandit>=1.7.9",
  "checkov>=3.2.0",
]
reporting = [
  "pytest-html>=4.1.1",
]
full = [
  "aiohttp>=3.9.4",
  "kafka-python>=2.0.0",
  "torch>=2.0.0,<3.0.0",
  "numba>=0.60.0",
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-timeout>=2.0.0",
  "pytest-html>=4.1.1",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
  "black>=24.0.0",
  "isort>=5.12.0",
  "types-setuptools",
  "hypothesis>=6.0.0",
  "uvicorn>=0.20.0",
  "locust>=2.20.0",
  "packaging>=21.0",
  "import-linter>=2.0",
  "pip-audit>=2.7.0",
  "bandit>=1.7.9",
  "checkov>=3.2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-timeout>=2.0.0",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
  "black>=24.0.0",
  "isort>=5.12.0",
  "types-setuptools",
  "httpx>=0.24.0",
  "hypothesis>=6.0.0",
  "uvicorn>=0.20.0",
  "locust>=2.20.0",
  "tomli>=2.0.0; python_version < '3.11'",
  "packaging>=21.0",
  "import-linter>=2.0",
]
security = [
  "pip-audit>=2.7.0",
  "bandit>=1.7.9",
  "checkov>=3.2.0",
]

[project.scripts]
mfn = "mycelium_fractal_net.cli:main"
mfn-api = "mycelium_fractal_net.cli:api_entrypoint"
mfn-validate = "mycelium_fractal_net.cli:validate_entrypoint"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
py-modules = ["api", "mycelium_fractal_net_v4_1"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mycelium_fractal_net*", "analytics", "experiments"]
exclude = ["tests*", "docs*", "examples*"]

[tool.uv]
default-groups = ["dev"]
managed = true

[tool.pytest.ini_options]
addopts = "-q --timeout=300"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error::UserWarning",
    "error::FutureWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
namespace_packages = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

[tool.coverage.run]
source = ["mycelium_fractal_net"]
branch = true
omit = [
  "*/tests/*",
  "*/experiments/*",
  "*/load_tests/*",
]

[tool.coverage.report]
show_missing = true
